tests/ui/redundant-send.stderr
error: redundant #[async_trait(?Send)] in method
 --> tests/ui/redundant-send.rs:5:5
  |
5 |     #[async_trait(?Send)]
  |     ^^^^^^^^^^^^^^^^^^^^^

error: redundant #[async_trait(?Send)] in method
  --> tests/ui/redundant-send.rs:13:5
   |
13 |     #[async_trait(?Send)]
   |     ^^^^^^^^^^^^^^^^^^^^^
